--- a/reportal/templates/base.html
+++ b/reportal/templates/base.html
@@ -116,6 +116,8 @@
 </main>
 
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-<script src="{% static 'js/reportset.js' %}"></script>
+<script src="{% static 'js/csrf.js' %}"></script>
+{% block javascripts %}
+{% endblock javascripts %}
 </body>
 </html>
