--- a/reportal/templates/base.html
+++ b/reportal/templates/base.html
@@ -118,7 +118,7 @@
     </nav>
     
 <main role="main" class="container">
-
+    {% include 'messages.html' %}
     <div class="jumbotron">
       {% block content %}
       {% endblock content %}
