--- a/reportal/porter/templates/porter/create.html
+++ b/reportal/porter/templates/porter/create.html
@@ -1,28 +1,25 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-
+{% load crispy_forms_tags %}
 
 {% block content %}
 
     <div class="flex">
         <div class="left"><a id="previous" href="#" class="previous">&laquo; Previous</a></div>
+        {% if scope == 'field' %}
+            <div ><button type="button" data-dismiss="modal" class="btn btn-primary btn-sm" id="import">Import</button></div>
+        {% endif %}
         <div class="right"><button type="button" data-dismiss="modal" class="btn btn-info btn-sm" id="new">+</button></div>
       </div>
 
     <!-- datatables, js renders thead and tbody-->
     <table id="datatables" class="table table-hover"></table>
+
 {% include 'porter/editdelete_modal.html' %}
 
 {% endblock %}
 
 {% block javascripts %}
-    {% if scope == 'reportset' %}
-        <script src="{% static 'js/reportset.js' %}"></script>
-    {% elif scope == 'template' %}
-        <script src="{% static 'js/template.js' %}"></script>
-    {% elif scope == 'field' %}
-        <script src="{% static 'js/field.js' %}"></script>
-    {% elif scope == 'report' %}
-        <script src="{% static 'js/report.js' %}"></script>
-    {% endif %}
+    <!-- use scope variable from view to dynamically determine js file -->
+    <script src="{% static 'js/'|add:scope|add:'.js' %}"></script>
 {% endblock %}
