--- a/reportal/porter/templates/porter/editdelete_modal.html
+++ b/reportal/porter/templates/porter/editdelete_modal.html
@@ -62,7 +62,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                    <h4 class="modal-title" id="import_modal_title"></h4>
+                    <h4 class="modal-title" id="modal_title"></h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     
             </div>
