add submit interface and folder create, next report dup and file val

--- a/reportal/templates/base.html
+++ b/reportal/templates/base.html
@@ -88,7 +88,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
               <div class="dropdown-menu" aria-labelledby="dropdown02">
                 <a class="dropdown-item" href="#">Developer Logs</a>
-                <a class="dropdown-item" href="#">Admin Portal</a>
+                <a class="dropdown-item" href="/admin">Admin Portal</a>
               </div>
           </li>
         {% endif %}
