--- a/reportal/templates/home.html
+++ b/reportal/templates/home.html
@@ -16,7 +16,7 @@
         <div class="card-header"><h4 class="my-0 font-weight-normal">Submit Portal</h4></div>
         <div class="card-body">
             <p>Make file submissions for a specific report. Automatically examine data quality against pre-defined template. </p>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Go submit</button>
+            <a class="btn btn-lg btn-block btn-outline-primary" href="{% url 'porter:list' %}" role="button">Go submit</a>
         </div>
       </div>
       <div class="card mb-4 shadow-sm">
