--- a/reportal/templates/base.html
+++ b/reportal/templates/base.html
@@ -25,13 +25,13 @@
         text-anchor: middle;
       }
       .flex {
-  display: flex;
-  justify-content: space-between;
-}
+        display: flex;
+        justify-content: space-between;
+      }
 
-.flex div {
-  padding: 1em
-}
+      .flex div {
+        padding: 1em
+      }
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
@@ -53,7 +53,12 @@
       .dropright:hover .dropdown-menu {
         display: block;
       }
-    </style>
+      #message-box{
+        max-height:200px;
+        overflow:scroll;
+        overflow-x:hidden;
+      }
+</style>
     <!-- Custom styles for this template -->
     <!-- <link href="starter-template.css" rel="stylesheet"> -->
   </head>
@@ -116,6 +121,7 @@
       </ul>
     </div>
     </nav>
+
     
 <main role="main" class="container">
     {% include 'messages.html' %}
