--- a/reportal/templates/base.html
+++ b/reportal/templates/base.html
@@ -50,13 +50,30 @@
         padding-bottom: 40px;
         background-color: #f5f5f5;
       }
+      .container {
+        margin-top: 200px;
+        height: 100%;
+      }
       .dropright:hover .dropdown-menu {
         display: block;
       }
       #message-box{
         max-height:200px;
-        overflow:scroll;
-        overflow-x:hidden;
+        overflow:auto;
+      }
+      .text-wrap{
+          white-space:normal;
+      }
+      .width-200{
+          width:200px;
+      }
+      div.scrollable {
+        max-height:200px;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: auto;        
       }
 </style>
     <!-- Custom styles for this template -->
@@ -128,7 +145,6 @@
     <div class="jumbotron">
       {% block content %}
       {% endblock content %}
-
     </div>
 
 </main>
