--- a/reportal/templates/base.html
+++ b/reportal/templates/base.html
@@ -92,18 +92,10 @@
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Submit</a>
+          <a class="nav-link" href="{% url 'porter:list' %}">Submit</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Download</a>
-          </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Create</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">New Report</a>
-            <a class="dropdown-item" href="#">New Template</a>
-            <a class="dropdown-item" href="#">New Rule Request</a>
-          </div>
+          <a class="nav-link" href="{% url 'porter:reportset' %}">Create</a>
         </li>
         {% if user.is_staff %}
           <li class="nav-item dropdown">
