add login require, add button fa icons, fix minor issues

--- a/reportal/porter/templates/porter/create.html
+++ b/reportal/porter/templates/porter/create.html
@@ -7,9 +7,9 @@
     <div class="flex">
         <div class="left"><a id="previous" href="#" class="previous">&laquo; Previous</a></div>
         {% if scope == 'field' %}
-            <div ><button type="button" data-dismiss="modal" class="btn btn-primary btn-sm" id="import">Import</button></div>
+            <div ><button type="button" data-dismiss="modal" class="btn btn-primary btn-sm" id="import"><span class="fa fa-upload"></span> Import</button></div>
         {% endif %}
-        <div class="right"><button type="button" data-dismiss="modal" class="btn btn-info btn-sm" id="new">+</button></div>
+        <div class="right"><button type="button" data-dismiss="modal" class="btn btn-info btn-sm" id="new"><span class="fa fa-clipboard"></span> New</button></div>
       </div>
 
     <!-- datatables, js renders thead and tbody-->
