--- a/reportal/porter/templates/porter/editdelete_modal.html
+++ b/reportal/porter/templates/porter/editdelete_modal.html
@@ -55,6 +55,7 @@
     </div>
 </div>
 {% endif %}
+
 {% if scope == 'field' %}
 <!-- Import modal -->
 <div class="modal fade" id="importModal" role="dialog">
@@ -62,7 +63,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                    <h4 class="modal-title" id="modal_title"></h4>
+                    <h4 class="modal-title" id="modal_title">Import</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     
             </div>
