--- a/reportal/porter/templates/porter/submit.html
+++ b/reportal/porter/templates/porter/submit.html
@@ -7,7 +7,7 @@
     <div class="flex">
         <div class="left"><a id="previous" href="#" class="previous">&laquo; Previous</a></div>
         {% if scope == 'submission' %}
-        <div class="right"><button type="button" data-dismiss="modal" class="btn btn-info btn-sm" id="new">+</button></div>
+        <div class="right"><button type="button" data-dismiss="modal" class="btn btn-info btn-sm" id="new"><span class="fa fa-clipboard"></span> New</button></div>
         {% endif %}
       </div>
 
